[project]
name = "developstoday-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.10",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.25",
    "uvicorn[standard]>=0.37.0",
]
